@@ -24,13 +24,11 @@ class DonPing < ActiveRecord::Base
   end
 
   def send_ping2(pingurl) 
-    Thread.start do
-      rbody0 = send_ping_xmlrpc_extended(pingurl)
-      if rbody0 == true || rbody0['flerror'] == true
-        rbody = send_ping_xmlrpc(pingurl)
-        if rbody == true || rbody['flerror'] == true
-          send_ping_rest(pingurl)
-        end
+    rbody0 = send_ping_xmlrpc_extended(pingurl)
+    if rbody0 == true || rbody0['flerror'] == true
+      rbody = send_ping_xmlrpc(pingurl)
+      if rbody == true || rbody['flerror'] == true
+        send_ping_rest(pingurl)
       end
     end
   end
